--- a/header.css
+++ b/header.css
@@ -1,25 +1,51 @@
 /* Colors and fonts */
 
 body{
-	background-color: #ffffff;
-    color: #458773;
-    font-family: avenir;
-    font-size: 16px;}
+  background-color: #ffffff;
+  color: #458773;
+  font-family: Avenir, sans-serif;
+  font-size: 16px;
+  margin: 0px 0px;
+  }
 
 a{
-	color: #458773;
-	text-decoration: none;
+  color: #458773;
+  text-decoration: none;
 }
 
 /* Custom design with class */
 
-.header-color {
+.header-style {
   background-color: #F0C899;
   color: #458773;
   font-size: 16px;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 20px;
+  font-weight: bold;
 }
 
 .logo-size {
   width: 180px;
 }
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
