--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 @import url("css/petsitter-registration.css")
+@import url("css/header.css")
 
 /* Colors and fonts */
 
 body{
-	background-color: #ffffff;
+background-color: #ffffff;
   color: #458773;
   font-family: avenir;
-  font-size: 16px;}
+  font-size: 16px;
+margin: 0px 0px;
+}
 
 h2 {
 	color: #FD5523;
