--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url("css/petsitter-registration.css")
 @import url("css/header.css")
+@import url("css/petsitterinformation.css")
+@import url("css/profilepage.css")
 
 /* Colors and fonts */
 
