--- a/css/containers.css
+++ b/css/containers.css
@@ -1,2 +1,34 @@
 /Containers/
 
+.card-style {
+  background-color: #A5C0A0;
+  width: 595.88px ;
+  height: 158.71px;
+  margin: 20px 32px;
+  box-shadow: 0 6px 5px rgba(0,0,0,.25);
+  font-size: 16px;
+  line-height: 21.86px;
+  color: rgba(50, 58, 48, 0.7);
+  padding-left: 120px;
+}
+
+.card-green {
+	background-color: #90AB8F;
+  	width: 628px ;
+  	height: 177px;
+  	margin: 20px auto;
+	padding-top: 20px;
+    padding-bottom: 60px;
+    padding-left: 30px;
+    padding-right: 30px;  	line-height: 16px;
+  	font-size: 12px;
+  	box-shadow: 0 6px 5px rgba(0,0,0,.25);
+  	color: rgba(0, 0, 0, 0.6);
+}
+
+.card-picture {
+	width: 800px;
+	left: 391px;
+	top: 562px;
+	margin: 20px auto;
+}
