--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url("css/header.css")
 @import url("css/petsitterinformation.css")
 @import url("css/profilepage.css")
+@import url("css/filtering.css")	
 
 /* Colors and fonts */
 
