--- a/css/containers.css
+++ b/css/containers.css
@@ -28,6 +28,14 @@
   	color: rgba(0, 0, 0, 0.6);
 }
 
+.card-rectangle {
+	width: 600px;
+	height: 646.89px;
+	background-color: #A5C0A0;
+	box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
+	font-size: 20px;
+}
+
 .card-picture {
 	width: 800px;
 	left: 391px;
