--- a/css/containers.css
+++ b/css/containers.css
@@ -1,6 +1,5 @@
 /Containers/
 
-
 .card-style {
   background-color: #A5C0A0;
   width: 595.88px ;
@@ -35,12 +34,21 @@
 	margin: 20px auto;
 }
 
+.card-design{
+  padding:10px;
+   background-color: #ffffff;
+  margin: 10px;
+  border-radius: 5px;
+  width: 250px;
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+}
+
 .container{
 	background: #A5C0A0;
   padding: 15px;
   margin: 100px auto;
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
-  width: 800px;
+  width: 875px;
   height: 400px;
 }
 
