--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 @import url("css/header.css")
 @import url("css/petsitterinformation.css")
 @import url("css/profilepage.css")
-@import url("css/filtering.css")	
+@import url("css/filtering.css")
+@import url("css/footer.css")
 
 /* Colors and fonts */
 
