update the @import

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
 @import url("css/profilepage.css")
 @import url("css/filtering.css")
 @import url("css/footer.css")
+@import url("css/avatar.css")
+@import url("css/btn.css")
+@import url("css/containers.css")
+@import url("css/form.css")
+@import url("css/pagination.css")
 
 /* Titles, body and links*/
 
