--- a/petsitter-registration.css
+++ b/petsitter-registration.css
@@ -1,43 +1,54 @@
-/* Colors and fonts */
+//* Colors and fonts */
 
 body{
-	background-color: #ffffff;
-    color: #458773;
-    font-family: avenir;
-    font-size: 16px;}
-
-h2 {
-	color: #FD5523;
-	font-size: 32px;
-	font-family: avenir;
-}
+  background-color: #ffffff;
+  color: #458773;
+  font-family: Avenir, sans-serif;
+  font-size: 16px;
+  margin: 0px 0px;
+  }
 
 a{
-	color: #458773;
-	text-decoration: none;
+  color: #458773;
+  text-decoration: none;
 }
 
+h1{
+  color: #FD5523;
+  font-size: 40px;
+  font-family: avenir;
+  margin-top: -45px;
+  text-shadow: 0px 4px rgba(0,0,0,0.1)
+}
 
 /* Custom design with class */
 
-.header-color {
+.header-style {
   background-color: #F0C899;
   color: #458773;
   font-size: 16px;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 20px;
+  font-weight: bold;
 }
 
 .logo-size {
   width: 180px;
 }
 
+/* Style the container */
+
 .container{
 	background: #A5C0A0;
-    padding: 15px;
-    margin: 50px auto;
-    box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
-    width: 944px;
-    height: 325px;
+  padding: 15px;
+  margin: 100px auto;
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+  width: 875px;
+  height: 400px;
 }
 
 .text-align{
@@ -71,4 +82,45 @@ a{
 .font-size{
 	font-size: 10px;
 	font-style: italic;
+}
+
+
+/* Style the footer */
+.footer-color {
+  background-color: #F0C899;
+  color: #458773;
+  font-size: 16px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  padding: 30px 30px;
+  padding-bottom: 1px;
+  padding-top: 40px;
+  left: 0px;
+}
+
+.list-align {
+  list-style: none;
+  padding-left: 0px;
+  display: inline;
+  padding: 0px 20px;
+  font-weight: 800;
+}
+
+.list-align > li {
+  display: inline;
+  padding: 15px;
+  padding-top: 10px
+}
+
+.icon-align {
+  list-style: none;
+  padding-right: 50px;
+  text-align: right;
+  font-size: 40px;
+  margin-top: -30px;
+  margin-bottom: 20px;
+}
+
+.icon-align > li {
+  display: inline;
+  padding-right: 0px 30px;
 }
