--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import url("css/containers.css")
 @import url("css/form.css")
 @import url("css/pagination.css")
+@import url("css/table.css")
 
 /* Titles, body and links*/
 
