--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import url("css/form.css")
 @import url("css/pagination.css")
 @import url("css/table.css")
+@import url("css/calendar.css")
 
 /* Titles, body and links*/
 
