--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
-@import url("css/petsitter-registration.css")
-@import url("css/header.css")
-@import url("css/petsitterinformation.css")
-@import url("css/profilepage.css")
-@import url("css/filtering.css")
-@import url("css/footer.css")
-@import url("css/avatar.css")
-@import url("css/btn.css")
-@import url("css/containers.css")
-@import url("css/form.css")
-@import url("css/pagination.css")
-@import url("css/table.css")
-@import url("css/calendar.css")
+@import url("css/petsitter-registration.css");
+@import url("css/header.css");
+@import url("css/petsitterinformation.css");
+@import url("css/profilepage.css");
+@import url("css/filtering.css");
+@import url("css/footer.css");
+@import url("css/avatar.css");
+@import url("css/btn.css");
+@import url("css/containers.css");
+@import url("css/form.css");
+@import url("css/pagination.css");
+@import url("css/table.css");
+@import url("css/calendar.css");
 
 /* Titles, body and links*/
 
