--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 @import url("css/petsitter-registration.css");
-@import url("css/components/header.css");
+@import url("components/header.css");
 @import url("css/petsitterinformation.css");
 @import url("css/profilepage.css");
 @import url("css/filtering.css");
-@import url("css/components/footer.css");
-@import url("css/components/avatar.css");
-@import url("css/components/btn.css");
-@import url("css/components/containers.css");
-@import url("css/components/form.css");
-@import url("css/components/pagination.css");
-@import url("css/components/table.css");
-@import url("css/components/calendar.css");
+@import url("components/footer.css");
+@import url("components/avatar.css");
+@import url("components/btn.css");
+@import url("components/containers.css");
+@import url("components/form.css");
+@import url("components/pagination.css");
+@import url("components/table.css");
+@import url("components/calendar.css");
 
 /* Titles, body and links*/
 
