--- a/petsittersignup.css
+++ b/petsittersignup.css
@@ -1,6 +1,6 @@
 body {
 	color: black;
-	font-family: Avenir;
+	font-family: Avenir, sans-serif;
 	letter-spacing: -0.5px;
 	margin: 100px auto;
 	width:650px;
