--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -44,14 +44,27 @@
 }
 
 .container{
-	background: #A5C0A0;
-  padding: 15px;
-  margin: 100px auto;
-  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
-  width: 875px;
-  height: 400px;
+background: #A5C0A0;
+padding: 15px;
+margin: 100px auto;
+box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+width: 875px;
+height: 400px;
 }
 
 
-
-	
+.container-style {
+  background-color: #A5C0A0;
+  width: 700px ;
+  height: 158px;
+  margin: 20px auto;
+  box-shadow: 0 6px 5px rgba(0,0,0,.25);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  line-height: 18px;
+  padding: 10px;
+  box-sizing: border-box;
+  column-gap: 5px;
+}
