--- a/css/components/avatar.css
+++ b/css/components/avatar.css
@@ -1,8 +1,13 @@
- .avatar-style {
+/* CSS for Avatar on search results page */
+
+.avatar-style {
   width: 180px;
   height: 180px;
   border-radius: 50%;
   box-shadow: 0 6px 5px rgba(0,0,0,.25);
-  margin-left: -100px;
-  margin-top: -31px;
+  float: left;
  }
+
+.avatar-margin {
+  margin-left: -58px;
+}
