--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -1,4 +1,4 @@
-/Containers/
+/*Containers*/
 
 .card-style {
   background-color: #A5C0A0;
@@ -52,6 +52,7 @@ width: 875px;
 height: 400px;
 }
 
+/* CSS for search results page */
 
 .container-style {
   background-color: #A5C0A0;
@@ -67,4 +68,42 @@ height: 400px;
   padding: 10px;
   box-sizing: border-box;
   column-gap: 5px;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.cards-layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: -60px;
+}
+
+.price-align {
+  float: right;
+  font-size: 16px;
+  text-align: center;
+}
+
+.price-style {
+  color: #FD5523;
+  font-weight: bold;
+  font-size: 40px;
+  text-shadow: 0px 4px rgba(0,0,0,.1);
+  line-height: 50px;
+}
+
+.rating-style {
+  font-size: 18px;
+  color: black;
+  font-weight: lighter;
+}
+
+.items-margin {
+  margin-bottom: -16px;
 }
