--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,17 @@ margin: 0px 0px;
 h1 {
 color: #FD5523;
 font-size: 40px;
-font-family: avenir;
+font-family: Avenir, sans-serif;
 margin-top: -45px;
 text-align: center;
 text-shadow: 0px 4px rgba(0,0,0,0.1)
+}
+
+
+h2 {
+  color: #FD5523;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 h3{
@@ -39,6 +46,11 @@ h3{
   text-shadow: 0px 4px rgba(0,0,0,0.1)
 }
 
+h4 {
+  font-size: 18px;
+  font-weight: lighter;
+}
+
 a {
 color: #458773;
 text-decoration: none;
@@ -47,4 +59,15 @@ text-decoration: none;
 a:hover {
  color: black;
 }
+
+p {
+font-size: 12px;
+}
+
+#map-size {
+  box-shadow: 0 4px 4px rgb(0,0,0, 25%);
+  float: right;
+  width: 120%;
+}
+
 
