--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@
 
 body {
 background-color: #ffffff;
-color: #458773;
 font-family: Avenir, sans-serif;
 margin: 0px 0px;
 }
@@ -40,7 +39,7 @@ h2 {
 h3{
   color: #323A30;
   font-size: 30px;
-  font-family: avenir;
+  font-family: Avenir;
   text-align: center;
   margin-top: -60px;
   text-shadow: 0px 4px rgba(0,0,0,0.1)
@@ -69,5 +68,4 @@ font-size: 12px;
   float: right;
   width: 120%;
 }
-
 
