--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ h3{
 h4 {
   font-size: 18px;
   font-weight: lighter;
+  color: black;
 }
 
 a {
@@ -61,6 +62,7 @@ a:hover {
 
 p {
 font-size: 12px;
+color: black;
 }
 
 #map-size {
