--- a/petsitter-registration.css
+++ b/petsitter-registration.css
@@ -1,4 +1,4 @@
-//* Colors and fonts */
+/* Colors and fonts */
 
 body{
   background-color: #ffffff;
@@ -123,4 +123,35 @@ h1{
 .icon-align > li {
   display: inline;
   padding-right: 0px 30px;
+}
+
+/* Responsive website */
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .table-style {
+    width: 600px;
+  }
+  .container{
+    width: 600px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .table-style {
+    width: 400px;
+  }
+  .container{
+    width: 400px;
+    height: 420px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .table-style {
+    width: 200px;
+  }
+  .container{
+    width: 320px;
+    height: 450px;
+  }
 }
