--- a/petsittersignup.css
+++ b/petsittersignup.css
@@ -26,10 +26,9 @@ h1 {
 
 .card-rectangle {
 	width: 600px;
-	height: 646.89px;
+	height: 590.89px;
 	background-color: #A5C0A0;
 	box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
-	font-size: 20px;
 }
 
 .list-incolumn {
@@ -39,51 +38,29 @@ h1 {
 	list-style: none;
 	line-height: 53px;
 	text-align: center;
+	margin-block-end: 0.3em;
 }
 
 .list-incolumn li {
 	padding: 20px;
 }
 
-.btn-white1 {
+.btn-white {
   background-color: #FFFFFF;
   box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
   color: black;
   width: 437.88px;
   height: 77.21px;
-  padding: 20px 40px;
+  padding: 17px 40px;
   margin: 35px auto;
   text-decoration-line: none;
   font-weight: bold;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.btn-white2 {
-  background-color: #FFFFFF;
-  box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
-  color: black;
-  width: 437.88px;
-  height: 77.21px;
-  padding: 20px 56px;
-  margin: 35px auto;
-  text-decoration-line: none;
-  font-weight: bold;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.btn-white:hover {
+	  background-color: ##f7f7f7;
 }
-
-.btn-white3 {
-  background-color: #FFFFFF;
-  box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
-  color: black;
-  width: 437.88px;
-  height: 77.21px;
-  padding: 20px 76px;
-  margin: 35px auto;
-  text-decoration-line: none;
-  font-weight: bold;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
 
 
 .btn-black {
@@ -92,12 +69,17 @@ h1 {
   color: white;
   width: 437.88px;
   height: 77.21px;
-  padding: 20px 64px;
+  padding: 17px 64px;
   margin: 35px auto;
   text-decoration-line: none;
   font-weight: bold;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+.btn-black:hover {
+	background-color: #000000c7;
+}
+	
 
 h2 {
 	padding-left: 120px;
@@ -106,6 +88,9 @@ h2 {
 	color: rgba(50, 58, 48, 1);
 }
 
+#or {
+	margin: 15px;
+}
 
 #account {
 	padding-left: 120px;
@@ -116,11 +101,16 @@ h2 {
 
 #login {
 	text-decoration-line: underline;
-	font-weight: 800;
+	font-weight: bold;
 	font-size:20px;
 	color: #305F51;
 	padding-left: 10px;
 }
+
+#login:hover {
+	color: #16352c;
+}
+
 
 
 
