--- a/petsittersignup.css
+++ b/petsittersignup.css
@@ -46,7 +46,7 @@ h1 {
 }
 
 .btn-white {
-  background-color: #FFFFFF;
+  background-color: rgba(255, 255, 255, 1);
   box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
   color: black;
   width: 437.88px;
