--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 @import url("components/pagination.css");
 @import url("components/table.css");
 @import url("components/calendar.css");
+@import url("componenrs/modal.css");
 
 /* Titles, body and links*/
 
