--- a/petsittersignup.css
+++ b/petsittersignup.css
@@ -42,17 +42,15 @@ h1 {
 }
 
 .list-incolumn li {
-	padding: 20px;
+	padding: 10px;
 }
 
 .btn-white {
   background-color: rgba(255, 255, 255, 1);
   box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
-  color: black;
   width: 437.88px;
-  height: 77.21px;
-  padding: 17px 40px;
-  margin: 35px auto;
+  height: 50.21px;
+  margin: 25px auto;
   text-decoration-line: none;
   font-weight: bold;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -68,9 +66,8 @@ h1 {
   box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
   color: white;
   width: 437.88px;
-  height: 77.21px;
-  padding: 17px 64px;
-  margin: 35px auto;
+  height: 50.21px;
+  margin: 25px auto;
   text-decoration-line: none;
   font-weight: bold;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -80,9 +77,15 @@ h1 {
 	background-color: #000000c7;
 }
 	
-.link {
+.link-black {
 	  text-decoration-line: none;
+	  color: black;
 
+}
+
+.link-white {
+	  text-decoration-line: none;
+	  color: white;
 }
 
 h2 {
