--- a/css/components/avatar.css
+++ b/css/components/avatar.css
@@ -11,3 +11,11 @@
 .avatar-margin {
   margin-left: -58px;
 }
+
+.avatar-big {
+    width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  box-shadow: 0 6px 5px rgba(0,0,0,.25);
+  margin-right: 20px;
+}
