--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -1,4 +1,14 @@
 /*Containers*/
+/* CSS for sign up modal */
+.card-rectangle {
+	width: 600px;
+	height: 590.89px;
+	background-color: #A5C0A0;
+	box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.25);
+}
+
+
+/* CSS for page */
 
 .card-style {
   background-color: #A5C0A0;
