--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,28 @@ color: black;
   width: 120%;
 }
 
+
+h5 {
+	color:#323A30;
+	font-style: normal;
+	letter-spacing: -0.02em;
+	font-size: 36px;
+	font-weight: bold;
+	text-align: center;
+	margin: -10px auto;
+	border-radius: 5px;
+	padding-top: 23px;
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#or {
+	margin: 15px;
+}
+
+#account {
+	padding-left: 120px;
+	font-weight: 400;
+	color: rgba(50, 58, 48, 1);
+	font-size: 20px;
+}
+
