--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,64 @@ h5 {
 	font-size: 20px;
 }
 
+h6 {
+  height: 35px;
+  text-align: center;
+  color: #FD5523;
+  font-size: 40px;
+  line-height: 0px;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+  margin-top: 30px;
+  margin-bottom: 0px;
+}
+
+h7 {
+    font-style: normal;
+    font-size: 40px;
+    display: flex;
+    color: #FD5523;
+    margin-block-start: -1.6em;
+   }
+
+
+h8 {
+  color: #FD6437;
+  font-weight: 500;
+  font-size: 24px;
+  display:flex;
+  margin-top: -40px;
+  margin-left: -6px;
+}
+
+h9 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 33px;
+  color: #FD6437;
+  margin-top: 0px;
+}
+
+#city-style {
+  margin-top: -120px;
+  margin-left: 10px;
+}
+
+#description-style {
+  margin-top: -50px;
+}
+
+#settings-style {
+  height: 20px;
+  font-size: 14px;
+  color: rgba(0,0,0,0.56);
+  padding-left:15px;
+  padding-top: 20px;
+}
+
+.settings {
+  color: rgba(0,0,0,0.56);
+ }
+
+
+
