--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -75,13 +75,7 @@ padding: 10px 25px;
 
 .btn-profile {
    background-color: #90AB8F;
-  color: rgba(253,100,55,1);
   width: 219px;
-  height: 60px;
-  padding: 20px 83px;
-  padding-left: 50px;
-  text-decoration-line: none;
-
   border-top-style: hidden;
   border-right-style: hidden;
   border-bottom-style: hidden;
@@ -90,41 +84,20 @@ padding: 10px 25px;
   border-color: rgba(0, 0, 0, 0.56);
 }
 
-.btn-left1 {
+.btn-left {
    background-color: #A5C0A0;
-  color: rgba(253,100,55,1);
-  width: 219px;
-  height: 60px;
-  padding: 20px 74px;
-  padding-left: 50px;
-  text-decoration-line: none;
 }
 
-.btn-left2 {
-   background-color: #A5C0A0;
+.link-color {
+  padding-left: 40px;
   color: rgba(253,100,55,1);
-  width: 219px;
   height: 60px;
-  padding: 20px 70px;
-  padding-left: 50px;
-  text-decoration-line: none;
-}
-
-.btn-left3 {
-   background-color: #A5C0A0;
-  color: rgba(253,100,55,1);
-  width: 219px;
-  height: 60px;
-  padding: 20px 68px;
-  padding-left: 50px;
-  text-decoration-line: none;
 }
 
 .btn-green1 {
   background-color: #458773;
   color: white;
   font-size: 18px;
-  font-weight: 800;
   width: 100px;
   height: 80px;
   padding: 15px 30px;
@@ -135,7 +108,6 @@ padding: 10px 25px;
   background-color: #458773;
   color: white;
   font-size: 18px;
-  font-weight: 800;
   width: 100px;
   height: 80px;
   padding: 15px 30px;
@@ -147,11 +119,10 @@ padding: 10px 25px;
   background-color: #458773;
   color: white;
   font-size: 18px;
-  font-weight: 800;
   width: 100px;
   height: 80px;
   padding: 15px 30px;
-  margin-left: 31px;
+  margin-left: 41px;
 }
 
 /* CSS for search results page */
