--- a/css/components/form.css
+++ b/css/components/form.css
@@ -63,3 +63,27 @@
   justify-content: flex-start;
   grid-gap: 20px;
 }
+
+/* CSS for petsitter dashboard page */
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 20%;
+  padding: 40px;
+  padding-top: 250px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  padding-left: 140px;
+  width: 60%;
+}
+
