--- a/css/components/image.css
+++ b/css/components/image.css
@@ -44,3 +44,9 @@
   padding-left: 7px;
   padding-bottom: 40px
 }
+
+ #logo-settings {
+  width: 25px;
+    margin-left: 30px;
+    padding-top: 20px;
+ }
