--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@
 @import url("components/table.css");
 @import url("components/calendar.css");
 @import url("components/modal.css");
+@import url("components/image.css");
+@import url("components/list.css");
+
 
 /* Titles, body and links*/
 
