--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ text-align: center;
 text-shadow: 0px 4px rgba(0,0,0,0.1)
 }
 
+#h1-adjustment {
+margin-top: 60px;
+font-size: 60px;
+}
 
 h2 {
   color: #FD5523;
