--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -92,6 +92,8 @@ padding: 10px 25px;
   padding-left: 40px;
   color: rgba(253,100,55,1);
   height: 60px;
+ font-weight: normal;
+  font-size: 18px;
 }
 
 .btn-green1 {
@@ -104,6 +106,10 @@ padding: 10px 25px;
   margin-left: 400px;
 }
 
+#edit-tab1 {
+  padding-top: 40px
+}
+
 .btn-green2 {
   background-color: #458773;
   color: white;
@@ -111,7 +117,11 @@ padding: 10px 25px;
   width: 100px;
   height: 80px;
   padding: 15px 30px;
-  margin: 520px;
+  margin: 519px;
+}
+
+#edit-tab {
+  padding-bottom: 80px
 }
 
 
