--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -140,3 +140,15 @@ padding: 10px 25px;
 #btn-align {
 padding-top: 20px;
 }
+
+button {
+border: none;
+background: none;
+color: #458773;
+font-weight: bold;
+font: Avenir, sans-serif;
+}
+
+button:hover {
+color: black;
+}
