--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -150,7 +150,7 @@ border: none;
 background: none;
 color: #458773;
 font-weight: bold;
-font: Avenir, sans-serif;
+font-size: 16px;
 }
 
 button:hover {
