--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,15 @@ h9 {
   margin-top: 0px;
 }
 
+h10 {
+    color: #25312c;
+    font-family: 'Avenir', sans-serif;
+    font-size: 30px;
+    margin: 0;
+    padding: 0;
+    text-shadow: 0px 4px rgba(0, 0, 0, .1);
+}
+
 #city-style {
   margin-top: -120px;
   margin-left: 10px;
