--- a/search.css
+++ b/search.css
@@ -121,6 +121,8 @@ padding-top: 5px;
   box-shadow: 0 4px 4px rgb(0,0,0, 25%);
   float: right;
   width: 120%;
+  margin-top: 200px;
+  margin-right: -25px;
 }
 
 .form-layout {
@@ -186,7 +188,8 @@ font-size: 12px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-top: -60px;
+  margin-top: 115px;
+  margin-left:-300px;
 }
 
 .price-align {
