--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -103,7 +103,8 @@ height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-top: -60px;
+  margin-top: 115px;
+  margin-left:300px;	
 }
 
 .price-align {
