--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,8 @@ color: black;
   box-shadow: 0 4px 4px rgb(0,0,0, 25%);
   float: right;
   width: 120%;
+  margin-top:200px;
+  margin-right:-25px;	
 }
 
 
