--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -137,3 +137,19 @@ height: 400px;
     width: 100%;
     height: 440px;
 }
+
+.green-box-title {
+    position: relative;
+    width: 60%;
+    margin-right: auto;
+    margin-left: auto;
+    top: -30px;
+}
+
+.green-box-second-title {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    width: 60%;
+    text-align: center;
+}
