--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -121,7 +121,7 @@ padding: 10px 25px;
   width: 100px;
   height: 80px;
   padding: 15px 30px;
-  margin-letft: 519px;
+  margin-left: 519px;
 }
 
 #edit-tab {
