--- a/css/components/modal.css
+++ b/css/components/modal.css
@@ -28,6 +28,6 @@
 
 /* Modal Content/Box */
 .content-modal {
-  margin: 15% auto; /* 15% from the top and centered */
-  width: 65%; /* Could be more or less, depending on screen size */
+  margin: 10 auto; /* 15% from the top and centered */
+  width: 40%; /* Could be more or less, depending on screen size */
 }
