--- a/css/components/form.css
+++ b/css/components/form.css
@@ -9,8 +9,11 @@
   font-family: 'Avenir', sans-serif;
   font-size: 16px;
   font-weight: bold;
-  margin-bottom: 62px;
   box-sizing: border-box;
+}
+
+.form-margin {
+    margin-bottom: 62px;
 }
 
 .smallerform-style {
