--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -157,3 +157,15 @@ font-size: 16px;
 button:hover {
 color: black;
 }
+
+/* Button for Petsitter information page */
+
+.save-changes {
+    position: absolute;
+    width: 150px;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    right: 10px;
+    bottom: 10px;
+}
