--- a/css/components/table.css
+++ b/css/components/table.css
@@ -7,6 +7,11 @@
   color:rgba(50,58,48,0.7)
 }
 
+.table-animals {
+    border-collapse: separate;
+    border-spacing: 0px 0px;
+}
+
 .text-align{
   text-align: center;
 }
