--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -161,6 +161,8 @@ color: black;
 /* Button for Petsitter information page */
 
 .save-btn {
+background-color: #458773;
+color:#FFFFFF;
     position: absolute;
     width: 150px;
     height: 50px;
