--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -53,6 +53,10 @@
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
 }
 
+#card-margin {
+  margin-left: 400px
+}
+
 .container{
 background: #A5C0A0;
 padding: 15px;
