--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,17 @@ h2 {
 color: #FD5523;
 }
 
+#h2-margin {
+  line-height: 33px;
+  text-align: 112px, 55px, -8px;
+  line-height: 33px;
+  display:flex;
+  align-items: center;
+  margin-top: -70px;
+  margin-left: -30px;
+
+}
+
 h3{
   color: #323A30;
   font-size: 30px;
