--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -131,6 +131,11 @@ border-radius: 5px;
   font-weight: lighter;
 }
 
+#city-style {
+  margin-top: -120px;
+  margin-left: 20px;
+}
+
 .items-margin {
   margin-bottom: -16px;
 }
