--- a/css/components/list.css
+++ b/css/components/list.css
@@ -29,6 +29,9 @@ margin: 65px auto;
   display: inline;
   }
 
+.list-inline2 {
+  list-style: none;
+}
 .list-inline, .list-inline2 {
   list-style: none;
   
