--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ color: #FD5523;
 h3{
   color: #323A30;
   font-size: 30px;
-  font-family: Avenir;
+  font-family: Avenir, sans-serif;
   text-align: center;
   margin-top: -50px;
   text-shadow: 0px 4px rgba(0,0,0,0.1)
@@ -191,4 +191,29 @@ h9 {
 font-size: 12px;
     font-style: italic;
     color: #323A30;
+}
+
+#title-margin {
+	margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#name-style {
+	    margin-top: -60px;
+}
+
+#description-style {
+	margin-top: -40px;
+    text-shadow: none;
+    color: #FD6437;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+#picture-style {
+    color: #FD6437;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 33px;
+    margin: 0px;
 }
