--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -26,6 +26,7 @@
 	background-color: #90AB8F;
   	width: 628px ;
   	height: 177px;
+	margin: 20px auto;
 	padding-top: 20px;
     padding-bottom: 60px;
     padding-left: 30px;
