--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -52,6 +52,18 @@
   color: rgba(0, 0, 0, 0.6);
 }
 
+.card-green3 {
+  background-color: #A5C0A0;
+  width: 240px ;
+  height: 375px;
+  margin: 20px 32px;
+  box-shadow: 0 6px 5px rgba(0,0,0,.25);
+  line-height: 1px;
+  color: rgba(50, 58, 48, 0.7);
+  padding-left: 50px;
+  margin-left: 0px;
+}
+
 .card-picture {
 	width: 800px;
 	left: 391px;
