--- a/css/components/containers.css
+++ b/css/components/containers.css
@@ -27,6 +27,7 @@
   	width: 628px ;
   	height: 177px;
 	margin: 20px auto;
+	margin-left: 0px;
 	padding-top: 20px;
     padding-bottom: 60px;
     padding-left: 30px;
