--- a/css/components/image.css
+++ b/css/components/image.css
@@ -16,6 +16,25 @@
     margin-top: -60px;
 }
 
+#cat2 {
+  width: 150px;
+  height: 132px;
+  filter: drop-shadow(0px 6px 5px rgba(0, 0, 0, 0.25)) blur(3px);
+  margin-bottom: 5px;
+  padding-left: 7px;
+  padding-bottom: 5px;
+    margin-top: -30px;
+  padding-top: 10px;
+}
+
+#cat3 {
+  width: 180px;
+  height: 220px;
+  filter: drop-shadow(0px 6px 5px rgba(0, 0, 0, 0.25));
+  margin-top: 5px;
+  padding-bottom: 5px;
+}
+
 #rabbit {
   width: 174.22px;
   height: 117.43px;
@@ -26,6 +45,14 @@
   right: 0%;
   padding-left: 7px;
   margin-top: -30px;
+}
+
+#rabbit2 {
+  width: 180px;
+  height: 117.43px;
+  filter: drop-shadow(0px 6px 5px rgba(0, 0, 0, 0.25));
+  margin-top: -30px;
+  padding-top: 10px;
 }
 
 #dog {
@@ -41,8 +68,24 @@
   padding-bottom: 40px
 }
 
+#dog2 {
+  width: 150px;
+  height: 190px;
+  filter: drop-shadow(0px 6px 5px rgba(0, 0, 0, 0.25));
+  margin-bottom: 5px;
+  padding-left: 7px;
+  padding-bottom: 5px;
+  margin-top: -15px;
+}
  #logo-settings {
   width: 25px;
     margin-left: 30px;
     padding-top: 20px;
  }
+
+#calendar {
+  width: 300px;
+  height: 300px;
+  filter: drop-shadow(0px 6px 5px rgba(0, 0, 0, 0.5));
+  padding: 20px;
+}
