--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -168,3 +168,16 @@ color: black;
     bottom: 10px;
     padding: 10px 15px;
 }
+
+.btn-green4 {
+  position: absolute;
+  background-color: #458773;
+  color: white;
+  font-size: 18px;
+  font-weight: 800;
+  width: 110px;
+  height: 30px;
+  padding: 10px 20px;
+  margin-left: -190px;
+  margin-top: 90px;
+}
