--- a/css/components/btn.css
+++ b/css/components/btn.css
@@ -169,15 +169,8 @@ color: black;
     padding: 10px 15px;
 }
 
-.btn-green4 {
-  position: absolute;
-  background-color: #458773;
-  color: white;
-  font-size: 18px;
-  font-weight: 800;
-  width: 110px;
-  height: 30px;
-  padding: 10px 20px;
-  margin-left: -190px;
-  margin-top: 90px;
+
+#confirm-btn {
+margin-left: -210px;
+padding: 20px 30px;
 }
